<resources>
    <string name="app_name">Chegou!</string>
    <string name="title_new_package">Novo Pacote</string>
    <string name="title_packages">Pacotes</string>
    <string name="title_reports">Relatórios</string>
    <string name="title_packages_out">Saída de pacotes</string>
    <string name="title_packages_in">Entrada de pacotes</string>
    <string name="title_configuration">Configurações</string>

    <string name="placeholder">nononononononononononono</string>

    <string name="title_new_shelf">Editar armazéns</string>
    <string name="title_new_recipient">Editar destinatários</string>

    <string name="ok">OK</string>
    <string name="success_dialog_title">Pronto!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
